--- a/README.adoc
+++ b/README.adoc
@@ -19,6 +19,7 @@ WARNING: UNDER DEVELOPMENT
 
 - `io.emeraldpay.polkaj:polkaj-scale:{lib-version}` - SCALE codec implementation
 - `io.emeraldpay.polkaj:polkaj-scale-types:{lib-version}` - SCALE mapping for standard Polkadot types
+- `io.emeraldpay.polkaj:polkaj-schnorrkel:{lib-version-dev}` - Schnorrkel for Java
 - `io.emeraldpay.polkaj:polkaj-ss58:{lib-version}` - SS58 codec to encode/decode addresses and pubkeys
 - `io.emeraldpay.polkaj:polkaj-common-types:{lib-version}` - common types (Address, DotAmount, Hash256, etc)
 - `io.emeraldpay.polkaj:polkaj-json-types:{lib-version}` - JSON RPC mapping to Java classes
