--- a/docs/README.adoc
+++ b/docs/README.adoc
@@ -6,6 +6,7 @@
 . link:02-encoding.adoc[Encoding and Decoding (SCALE, SS58)]
 . link:03-rpc-client.adoc[RPC Client]
 . link:04-cryptography.adoc[Cryptography and Keys]
+. link:05-balance.adoc[Working with Account Balance]
 
 == Reference
 
